Tags, Client card component

--- a/src/app.html
+++ b/src/app.html
@@ -9,4 +9,6 @@
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
+
+  <script src="../src/lib/assets/js/isotope.pkgd.min.js"></script>
 </html>
