--- a/src/app.html
+++ b/src/app.html
@@ -10,5 +10,6 @@
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 
-  <script src="../src/lib/assets/js/isotope.pkgd.min.js"></script>
+  <script src="../src/lib/assets/js/isotope.pkgd.js"></script>
+  <script src="../src/lib/assets/js/imagesloaded.pkgd.js"></script>
 </html>
