--- a/src/app.html
+++ b/src/app.html
@@ -10,6 +10,8 @@
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 
-  <script src="../src/lib/assets/js/isotope.pkgd.js"></script>
-  <script src="../src/lib/assets/js/imagesloaded.pkgd.js"></script>
+  <!-- <script src="../src/lib/assets/js/isotope.pkgd.js"></script>-->  
+  <!-- <script src="../src/lib/assets/js/imagesloaded.pkgd.js"></script> -->
+  <script src="https://unpkg.com/imagesloaded@5/imagesloaded.pkgd.min.js"></script>
+  <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.min.js"></script>  
 </html>
