--- a/src/app.html
+++ b/src/app.html
@@ -5,15 +5,10 @@
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
-		
+  <script src="https://unpkg.com/imagesloaded@5/imagesloaded.pkgd.min.js"></script>
+  <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.min.js"></script>
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">%sveltekit.body%</div>
-	</body>
-
-  <script src="../src/lib/assets/js/isotope.pkgd.js"></script>  
-  <script src="../src/lib/assets/js/imagesloaded.pkgd.js"></script>
-  <!-- script src="https://unpkg.com/imagesloaded@5/imagesloaded.pkgd.min.js"></!-->
-  <!-- script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.min.js"></!--> 
-   
+	</body>  
 </html>
